XNAT-6518: temporarily always show scrollbar to skirt this issue

--- a/src/main/webapp/scripts/xnat/app/scanTable/scanTable.css
+++ b/src/main/webapp/scripts/xnat/app/scanTable/scanTable.css
@@ -261,7 +261,6 @@
     overflow-y: scroll; /* XNAT-6500 */
 }
 .scrollable-table tbody {
-    overflow-y: auto;
     max-height: 600px;
 }
 
